# io19-sonic-boom

./: README.md
Android/: .gitignore  build.gradle  settings.gradle
Android/app/: build.gradle
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  MidiMessageParser.cpp  MidiMessageParser.h  VoiceAllocator.cpp  VoiceAllocator.h  native-lib.cpp
Android/app/src/main/java/com/example/io19/sonicboom/: MainActivity.java
Android/app/src/main/res/layout/: activity_main.xml
Android/app/src/main/res/values/: strings.xml
Android/gradle/wrapper/: gradle-wrapper.properties
